# nmcardle.com

./: .bazelrc  .firebaserc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  deploy.sh  firebase.json  release.sh  shell.nix
cv/: BUILD  cv.md  gp-search-20230122-092746.csv  patents_to_md.py  resume.md  template.html  template.latex
games/mercator/: BUILD  cards.rs  game.rs  lib.rs  main.rs  rand.rs  tokens.rs
public/: index.html  resume.md
public/js/: index.js
resume/: .gitignore  BUILD.bazel  Makefile  cv.md  resume.html  resume.md  template.html  template.latex
rules/: pandoc.bzl
static/: BUILD  squirrels_go_away.html
static/js/: index.js
util/: open_rustdoc.sh
