load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "release",
    srcs = [
        "//cv",
        "//static:all_files",
    ],
    package_dir = "public",
    remap_paths = {
        # Dump files from static/ directly into the public/ dir.
        "static": "",
    },
    # Do not collapse directory structure.
    strip_prefix = ".",
)

# Run this target before starting rust-analyzer.
alias(
    name = "gen_rust_project",
    actual = "@rules_rust//tools/rust_analyzer:gen_rust_project",
)

# Run this target to format all Rust sources in the tree.
alias(
    name = "rustfmt",
    actual = "@rules_rust//:rustfmt",
)

sh_binary(
    name = "open_rustdoc",
    srcs = ["util/open_rustdoc.sh"],
    data = [
        "//games/mercator:mercator_doc",
    ],
)
