workspace(name = "nmcardle")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

PANDOC_VERSION = "3.2"

http_archive(
    name = "pandoc",
    build_file_content = "exports_files(glob(['**']))",
    integrity = "sha256-6j+W3eVq4Vd8gRhGlLhXbY7+xS4WjOSabn3xRB9Cgok=",
    strip_prefix = "pandoc-{version}/bin".format(version = PANDOC_VERSION),
    url = "https://github.com/jgm/pandoc/releases/download/{version}/pandoc-{version}-linux-amd64.tar.gz".format(version = PANDOC_VERSION),
)

http_archive(
    name = "rules_pkg",
    sha256 = "8f9ee2dc10c1ae514ee599a8b42ed99fa262b757058f65ad3c384289ff70c4b8",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_pkg/releases/download/0.9.1/rules_pkg-0.9.1.tar.gz",
        "https://github.com/bazelbuild/rules_pkg/releases/download/0.9.1/rules_pkg-0.9.1.tar.gz",
    ],
)

load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")

rules_pkg_dependencies()
